refactored interfaces to one interface and persisted dates [LF,SA]